<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_drawable"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:paddingVertical="25dp"
            app:srcCompat="@drawable/logoorig_trans"
            android:contentDescription="@string/gamezap_logo">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:text="@string/login_TXT_signin"
                android:textSize="30sp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_TXT_Hey"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_TXT_email"
                android:textSize="18sp"/>
            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/login_ETX_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:textSize="18sp"
                android:autofillHints=""
                android:hint="@string/login_TXT_emailHint"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_TXT_password"
                android:textSize="18sp"/>
            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/login_ETX_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:ellipsize="start"
                android:hint="@string/login_TXT_passwordHint"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/login_TXT_signInFailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/red_warning_error"
                android:textSize="15sp"/>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/login_BTN_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_TXT_sign_in"
                android:textColor="@color/blue_heavy"
                app:backgroundTint="@color/yellow"
                android:textSize="20sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/login_TXT_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_TXT_newcomer"
                android:textColor="@color/white"
                android:layout_marginHorizontal="5dp"
                android:textSize="15sp" />
            <Button
                android:id="@+id/login_BTN_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Transparent"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/yellow"
                android:layout_marginTop="5dp"
                android:text="@string/login_TXT_sign_up"
                android:textSize="12sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>