<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_drawable"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".GameSearch">

    <LinearLayout
        android:id="@+id/game_LYO_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="20dp"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/empty">
            </ImageView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="20dp"
                app:srcCompat="@drawable/logoorig_trans"
                android:contentDescription="@string/gamezap_logo">
            </ImageView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="20dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/gameSearch_IMG_profile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:civ_border_color="@color/yellow"
                    app:civ_border_width="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >
                </de.hdodenhof.circleimageview.CircleImageView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            
            <AutoCompleteTextView
                android:id="@+id/gameSearch_ACT_searchBar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Search Game..."
                android:completionThreshold="1"
                android:completionHint="Search Game..."
                />
            

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gameSearch_RCY_sliders"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <Button
                android:id="@+id/gameSearch_BTN_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_heavy"
                app:backgroundTint="@color/yellow"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/gameSearch_TXT_random_me"/>
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/gameSearch_LVW_gameList"
        android:layout_above="@id/game_LYO_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>